--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,7 @@
 platform = atmelavr
 board = nanoatmega328
 framework = arduino
+monitor_speed = 9600
+lib_deps = 
+	mathertel/OneButton@^2.5.0
+	arduino-libraries/Servo@^1.2.1
