--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,8 @@
 platform = atmelavr
 board = nanoatmega328
 framework = arduino
-monitor_speed = 9600
+monitor_speed = 115200
 lib_deps = 
-	mathertel/OneButton@^2.5.0
+    mathertel/OneButton@^2.0.3
+	; mathertel/OneButton@^2.5.0
 	arduino-libraries/Servo@^1.2.1
