--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,6 @@ board = nanoatmega328
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
-    mathertel/OneButton@^2.0.3
-	; mathertel/OneButton@^2.5.0
+	mathertel/OneButton@^2.0.3
 	arduino-libraries/Servo@^1.2.1
+	gitlab-airbornemint/Protothreads@^1.4.0-arduino.beta.1
